--- a/app/templates/cs_chatbot_ticket.html
+++ b/app/templates/cs_chatbot_ticket.html
@@ -39,10 +39,25 @@
     <button class="btn btn-primary mt-2">Send Reply</button>
   </form>
 
+  <hr>
+
+  <!-- ⭐ TRANSFER FORM (NEW) -->
+  <form action="/chatbot/ticket/{{ ticket.id }}/transfer" method="post" class="mt-3">
+    <label class="fw-bold">Transfer ticket to:</label>
+    <select name="new_queue" class="form-control">
+      <option value="md_chatbot">MD</option>
+      <option value="mod_chatbot">MOD</option>
+    </select>
+    <button class="btn btn-warning mt-2">Transfer</button>
+  </form>
+
+  <hr>
+
   <!-- Resolve Ticket -->
   <form action="/cs/chatbot/tickets/{{ ticket.id }}/resolve" method="post" class="mt-3">
     <button class="btn btn-success">Resolve Ticket</button>
   </form>
+
 </div>
 
 {% endblock %}
