--- a/app/templates/chatbot.html
+++ b/app/templates/chatbot.html
@@ -165,6 +165,9 @@ body[data-path="/chatbot"] .page {
 
 </div>
 
+<script>
+  window.ACTIVE_TICKET_FROM_SERVER = {{ active_ticket or 'null' }};
+</script>
 <script src="/static/js/chatbot.js"></script>
 
 {% endblock %}
