--- a/app/templates/chatbot.html
+++ b/app/templates/chatbot.html
@@ -166,7 +166,7 @@ body[data-path="/chatbot"] .page {
 </div>
 
 <script>
-  window.ACTIVE_TICKET_FROM_SERVER = {{ active_ticket or 'null' }};
+  window.ACTIVE_TICKET_FROM_SERVER = {{ active_ticket_id or 'null' }};
 </script>
 <script src="/static/js/chatbot.js"></script>
 
