--- a/app/templates/chatbot.html
+++ b/app/templates/chatbot.html
@@ -168,6 +168,11 @@ body[data-path="/chatbot"] .page {
 <script>
   window.ACTIVE_TICKET_FROM_SERVER = {{ active_ticket or 'null' }};
 </script>
-<script src="/static/js/chatbot.js"></script>
+
+<script>
+  localStorage.removeItem("chatbot_active_ticket");
+</script>
+
+<script src="/static/js/chatbot.js?v=2"></script>
 
 {% endblock %}
