--- a/app/templates/chatbot.html
+++ b/app/templates/chatbot.html
@@ -170,6 +170,10 @@ body[data-path="/chatbot"] .page {
 </script>
 
 
-<script src="/static/js/chatbot.js?v=2"></script>
+<script>
+  localStorage.removeItem("chatbot_active_ticket");
+</script>
+
+<script src="/static/js/chatbot.js?v=7"></script>
 
 {% endblock %}
